@@ -2,6 +2,7 @@
 
 * Add FirstData Global Gateway e4 [frobcode]
 * PaymentExpress: Add support for optional fields: ClientType and TxnData [moklett]
+* PaymentExpress: Limit MerchantReference/description to 64 chars [moklett]
 
 == Version 1.29.3 (December 7, 2012)
 
